# RemoteDesk

./: .env.example  .gitignore  Makefile  README.md
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: desktop_self_test_cli.rs  lib.rs  main.rs  windows_self_test_cli.rs
apps/desktop/src-tauri/src/capture/: mod.rs
apps/desktop/src-tauri/src/codec/: mod.rs
apps/desktop/src-tauri/src/config/: mod.rs
apps/desktop/src-tauri/src/controller/: mod.rs
apps/desktop/src-tauri/src/core/: mod.rs
apps/desktop/src-tauri/src/host/: mod.rs
apps/desktop/src-tauri/src/native_sender/: mod.rs
apps/desktop/src-tauri/src/platform/: capture.rs  mod.rs
apps/desktop/src-tauri/src/transport/: mod.rs
docs/: android_macos_remote_control_requirements.md  android_macos_remote_control_system_design.md  development_notes.md  release_notes_0.1.1.md  remote_control_progress_checklist.md  webrtc_native_media_pipeline_plan.md  windows_android_emulator_test_report_20260630.md  windows_android_real_device_test_report_20260702.md  windows_android_validation_report_20260701.md  windows_desktop_runbook.md
infra/: api-server.env.example  api-server.service
prototype/: README.md  app.js  index.html  remote-window.html  styles.css
scripts/: bootstrap-windows-toolchains.ps1  capability_matrix_report.py  check-e2e-proof-clients.ps1  check_protocol.py  rd-toolchain.ps1  short_reconnect_check.sh  soak_6_5.sh  soak_report.py  triad_ctl.sh  watch-e2e-proof.ps1  (+1 more)
(+49 files in other folders)
